--- a/styles.css
+++ b/styles.css
@@ -71,10 +71,48 @@
     background-repeat: no-repeat;
     background-size: cover;
     padding: 100px 0 400px 0;
-  padding-bottom: 14% ;
+    padding-bottom: 14% ;
+
   
   }
   
+  .infoContact{
+    width: 100%;
+    height: 50px;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    margin-top: 15px;
+    box-sizing: border-box;
+
+
+  }
+  .infoContact form input{
+
+    width: 500px;
+    height: 30px;
+    outline: none;
+    border: none;
+    font-size: 2em;
+    border-left: 2px solid #0000;
+    margin: 5px;
+    background-color: #ffffff;
+
+
+  }
+
+  .infoContact button {
+    margin: 5px;
+    font-size: 15px;
+    width: 100px;
+    height: 30px;
+    background: rgb(185, 56, 56);
+    cursor: pointer;
+    border: none;
+    color: rgb(243, 243, 243);
+    position: relative;
+    border-radius: 12px;
+  } 
   .Ingresar-Correo-Title{
     font-size: 5rem;
     line-height: 4.5rem;
@@ -95,6 +133,8 @@
   
   }
   
+
+
   .Barra-Correo-Ingresa{
    padding-top: 15%;
    padding-left: 5%;
